<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Networking Examples</string>
    <string name="nist_button_text">Show NIST Time</string>
    <string name="ftp_server_prompt">FTP Server:&#160;</string>
    <string name="ftp_button_text">Show Welcome Message</string>
    <string name="url_prompt">URL:&#160;</string>
    <string name="url_checker_button_text">Check URL</string>
    <string name="search_string_prompt">Search String:&#160;</string>
    <string name="base_url_prompt">Base URL:&#160;&#160;</string>
    <string name="base_url_default">http://apps.coreservlets.com/NetworkingSupport/loan-calculator</string>
    <string name="loan_amount_prompt">Loan amount:&#160;&#160;</string>
    <string name="interest_rate_prompt">Interest rate:&#160;&#160;</string>
    <string name="loan_period_prompt">Months:&#160;&#160;</string>
    <string name="loan_button_text">Calculate Payments</string>
    <string name="monthly_payment_prompt">Monthly payment:&#160;&#160;</string>
    <string name="total_payments_prompt">Total payments:&#160;&#160;</string>
</resources>
