<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="1"
             android:shrinkColumns="1">
    <TableRow>
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:text="@string/base_url_prompt" 
                  android:gravity="right"/>
        <EditText android:id="@+id/base_url" 
                  android:text="@string/base_url_default"
                  android:inputType="textUri" 
                  android:layout_height="wrap_content">
        </EditText>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:text="@string/loan_amount_prompt" 
                  android:gravity="right"/>
        <EditText android:id="@+id/loan_amount" 
                  android:inputType="numberDecimal" 
                  android:layout_height="wrap_content">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"
                  android:text="@string/interest_rate_prompt" 
                  android:gravity="right"/>
        <EditText android:id="@+id/interest_rate" 
                  android:inputType="numberDecimal" 
                  android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:text="@string/loan_period_prompt" 
                  android:gravity="right"/>
        <EditText android:id="@+id/loan_period" 
                  android:inputType="number" 
                  android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <Button android:text="@string/loan_button_text" 
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showLoanPayments"/>
    </TableRow>
    <TableRow android:layout_marginTop="@dimen/loan_separator_height">
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:text="@string/monthly_payment_prompt" 
                  android:gravity="right"/>
        <TextView android:id="@+id/monthly_payment_result"
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:textColor="@color/result_foreground"
                  android:gravity="left"/>
    </TableRow>
    <TableRow>
        <TextView android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:text="@string/total_payments_prompt" 
                  android:gravity="right"/>
        <TextView android:id="@+id/total_payments_result"
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:textColor="@color/result_foreground"
                  android:gravity="left"/>
    </TableRow>
</TableLayout>

