<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" 
                  android:layout_height="wrap_content">
        <TextView android:text="@string/url_prompt"
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/url_to_search" 
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" 
                  android:inputType="textUri">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" 
                  android:layout_height="wrap_content">
        <TextView android:text="@string/search_string_prompt"
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content"/>
        <EditText android:id="@+id/search_string" 
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text">
        </EditText>
    </LinearLayout>
    <Button android:text="@string/url_checker_button_text"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:onClick="searchInUrl"/>
    <ScrollView android:layout_width="match_parent" 
                android:layout_height="match_parent">
        <TextView android:id="@+id/url_search_result"
                  android:textSize="@dimen/url_search_results_size" 
                  android:layout_width="match_parent" 
                  android:layout_height="match_parent"/>
    </ScrollView>
</LinearLayout>
